--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,109 @@
-<p>footer works!</p>
+
+<footer class="page-footer font-small">
+  <div class="container text-center text-md-left">
+    <div class="row">
+      <div class="col-md-3 mx-auto">
+
+        <h5 class="font-weight mt-3 mb-4">QASWA REAL ESTATE</h5>
+
+
+            <p>ABC PLACE WAIYAKI WAY<br>
+            P.O BOX 14090-00800<br>
+            NAIROBI,KENYA</p>
+
+          <ul class="list-unstyled">
+          <li>
+            <p>+254700000000</p>
+          </li>
+          <li>
+            <p>HELLO@QASWA.COM</p>
+          </li>
+        </ul>
+      </div>
+      <hr class="clearfix w-100 d-md-none">
+      <div class="col-md-3 mx-auto">
+        <h5 class="font-weight mt-3 mb-4">SUBSCRIBE</h5>
+        <div class="col">
+          <form class="input-group">
+            <input type="text" class="form-control" placeholder="Enter your email"
+              aria-label="Your email" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <button class="btn btn-sm btn-outline-white my-0" type="button">SUBMIT</button>
+            </div>
+          </form>
+
+        </div>
+
+          <h5 class="font-weight mt-3 mb-4" id="social">SOCIAL</h5>
+          <div class="row">
+            <div class="mb-5 flex-center">
+          <a routerlink="" class="fb-ic">
+              <i class="bi bi-facebook"> </i>
+            </a>
+            <a routerLink="" class="tw-ic">
+              <i class="bi bi-twitter"> </i>
+            </a>
+
+            <a routerLink="" class="gplus-ic">
+              <i class="bi bi-google"> </i>
+            </a>
+
+            <a routerLink="" class="li-ic">
+              <i class="bi bi-linkedin"> </i>
+            </a>
+
+            <a routerLink="" class="ins-ic">
+              <i class="bi bi-instagram"> </i>
+            </a>
+
+            <a routerLink="" class="pin-ic">
+              <i class="bi bi-pinterest"> </i>
+            </a>
+
+        </div>
+      </div>
+      </div>
+      <hr class="clearfix w-100 d-md-none">
+      <div class="col-md-3 mx-auto">
+        <h5 class="font-weight mt-3 mb-4">COMPANY</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="">SERVICES</a>
+          </li>
+          <li>
+            <a href="">CAREERS</a>
+          </li>
+          <li>
+            <a href="">GET IN TOUCH</a>
+          </li>
+          <li>
+            <a href="">PRIVACY POLICY</a>
+          </li>
+        </ul>
+
+      </div>
+
+      <hr class="clearfix w-100 d-md-none">
+      <div class="col-md-3 mx-auto">
+        <h5 class="font-weight mt-3 mb-4">EXPLORE</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="">HASS HOME</a>
+          </li>
+          <li>
+            <a href="">PROPERTY FOR SALE</a>
+          </li>
+          <li>
+            <a href="">PROPERTY TO LET</a>
+          </li>
+          <li>
+            <a href="">DEVELOPMENTS</a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+</footer>
