--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,7 +31,7 @@
           <a class="nav-link" routerLink="contact"  routerLinkActive="active-link">Contact Us</a>
         </li>
       </ul>
-      <button class="btn btn-outline-success me-2" type="button" routerLink="contactform">Get in Touch</button>
+      <button class="btn btn-outline-success me-2" type="button">Get in Touch</button>
     </div>
   </div>
 </nav>
