--- a/src/app/development/development.component.html
+++ b/src/app/development/development.component.html
@@ -7,7 +7,7 @@
     <ul>
       <li>BEDS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1,2,3</li>
       <li>PRICE FROM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;KSHS 240,000</li>
-      <li>FLOORPLANS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VIEW</li>
+      <li>FLOORPLANS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="">VIEW</a></li>
     </ul>
     <button class="btn btn-outline" type="button">ENQUIRE</button>
     <button  onclick="window.location.href = 'divine';" class="btn2 btn-outline" type="button" >DETAILS</button>
