--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,43 +62,43 @@
   <div class="row">
     <div class="col-4">
       <div class="box">
-        <img src="../../../assets/img/apartment.jpg" alt="" loading="lazy" class="fade-in"/>
-        <h1>DISCOVER OUR<br>VIRTUAL TOURS</h1>
-        <p>Tour our developments with 3D intercative<br>walkthroughs</p>
+        <img src="../../../assets/img/apartment.jpg" alt="" loading="lazy" class="slide-in"/>
+        <h1 class="slide-in">DISCOVER OUR<br>VIRTUAL TOURS</h1>
+        <p class="slide-in">Tour our developments with 3D intercative<br>walkthroughs</p>
         <button  onclick="" class="btn2 btn-outline" type="button" >TAKE THE TOUR</button>
       </div>
     </div>
     <div class="col-4">
       <div class="box">
-        <img src="../../../assets/img/apartment2.jpg" alt="" loading="lazy" class="fade-in"/>
-        <h1>BREATHTAKING<br>DEVELOPMENTS</h1>
-        <p>Explore our portfolio of developments<br>inspired by innovation and design</p>
+        <img src="../../../assets/img/apartment2.jpg" alt="" loading="lazy" class="slide-in"/>
+        <h1 class="slide-in">BREATHTAKING<br>DEVELOPMENTS</h1>
+        <p class="slide-in">Explore our portfolio of developments<br>inspired by innovation and design</p>
         <button onclick="window.location.href = 'development';"  class="btn2 btn-outline" type="TAKE THE TOUR" >EXPLORE</button>
       </div>
     </div>
     <div class="col-4">
       <div class="box">
-        <img src="../../../assets/img/insidevilla.jpg" alt="" loading="lazy" class="fade-in"/>
-        <h1>EXPERIENCE OUR<br>INSIGHTS</h1>
-        <p>Peruse a carefully curated blog for lifestyle,<br>buying and property tips</p>
+        <img src="../../../assets/img/insidevilla.jpg" alt="" loading="lazy" class="slide-in"/>
+        <h1 class="slide-in">EXPERIENCE OUR<br>INSIGHTS</h1>
+        <p class="slide-in">Peruse a carefully curated blog for lifestyle,<br>buying and property tips</p>
         <button  onclick="" class="btn2 btn-outline" type="button" >START READING</button>
       </div>
     </div>
-    <h6>DEVELOPMENTS <hr></h6>
-    <h2>LATEST LAUNCHES</h2>
-    <p class="text2">Qaswa offers investment-grade developments <br>all over the
+    <h6 class="fade-in">DEVELOPMENTS <hr></h6>
+    <h2 class="fade-in">LATEST LAUNCHES</h2>
+    <p class="fade-in" id="text2">Qaswa offers investment-grade developments <br>all over the
        City. The developments we offer have been<br>
        conceptualized by our development team to be high quality<br>assets using a data-driven approach in planning and design,<br> that gears property for high rental returns and<br>an escalated rate of capital growth.</p>
         <div class="img1">
-          <img src="../../../assets/divine/hall.jpeg" alt="" loading="lazy"/>
+          <img src="../../../assets/divine/hall.jpeg" alt="" loading="lazy" class="fade-in"/>
           <h5>RIVERSIDE DRIVE | BESPOKE LUXURY LIVING | APARTMENT</h5>
         </div>
         <div class="img2">
-          <img src="../../../assets/img/villa.jpg" alt="" loading="lazy" />
+          <img src="../../../assets/img/villa.jpg" alt="" loading="lazy" class="fade-in" />
           <h5>REFLECTIONS | LAVINGTON | BESPOKE LUXURY LIVING</h5>
         </div>
         <div class="img3">
-          <img src="../../../assets/img/villa2.jpg" alt="" loading="lazy"/>
+          <img src="../../../assets/img/villa2.jpg" alt="" loading="lazy" class="fade-in"/>
           <h5>REFLECTIONS | LAVINGTON | BESPOKE LUXURY LIVING</h5>
         </div>
         <button  onclick="window.location.href = 'development'" class="btn3 btn-outline" type="button" >VIEW ALL DEVELOPMENTS</button>
