--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -39,7 +39,17 @@ text-align: center;
   font-size: 57px;
   color: white;
   text-decoration: blink;
-  font-weight: bolder
+  font-weight: bolder;
+
+}
+.slide-in{
+  opacity: 0;
+  transform: translateY(80px);
+  transition: opacity 0.9s, transform 0.9s;
+}
+.slide-in.show{
+  opacity: 1;
+  transform: translateY(0);
 }
 .text{
   position: relative;
@@ -106,7 +116,7 @@ h2{
   font-size: 40px;
   color: #301934;
 }
-.text2{
+#text2{
   position: relative;
   top: 510px;
 
@@ -125,4 +135,13 @@ h2{
   width: 192px;
   height: 73px;
 }
+.fade-in {
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: opacity 0.9s, transform 0.9s;
+}
 
+.fade-in.show {
+  opacity: 1;
+  transform: translateX(0%);
+}
